--- a/home/index.html
+++ b/home/index.html
@@ -49,7 +49,7 @@
         </div>
         <ul class="layui-nav layui-nav-tree" lay-filter="test" lay-shrink="all">
           <li class="layui-nav-item">
-            <a href="javascript:;">
+            <a href="/home/dashboard.html" target="layBody">
               <span class="iconfont icon-home"></span>首页
             </a>
           </li>
@@ -68,9 +68,11 @@
               <span class="iconfont icon-user"></span>个人中心
             </a>
             <dl class="layui-nav-child">
-              <dd><a href="javascript:;"><i class="layui-icon layui-icon-set-fill"></i>基本资料</a></dd>
+              <dd><a href="/user/user_info.html" target="layBody"><i class="layui-icon layui-icon-set-fill"></i>基本资料</a>
+              </dd>
               <dd><a href="javascript:;"><i class="layui-icon layui-icon-set-fill"></i>更换头像</a></dd>
-              <dd><a href="javascript:;"><i class="layui-icon layui-icon-set-fill"></i>重置密码</a></dd>
+              <dd><a href="/user/user_pwd.html" target="layBody"><i class="layui-icon layui-icon-set-fill"></i>重置密码</a>
+              </dd>
             </dl>
           </li>
         </ul>
@@ -79,7 +81,7 @@
 
     <div class="layui-body">
       <!-- 内容主体区域 -->
-      <iframe src="/user/user_info.html" frameborder="0"></iframe>
+      <iframe src="/user/user_pwd.html" frameborder="0" name="layBody"></iframe>
       <div style="padding: 15px;">内容主体区域</div>
     </div>
 
