--- a/home/index.html
+++ b/home/index.html
@@ -58,7 +58,8 @@
               <span class="iconfont icon-16"></span>文章管理
             </a>
             <dl class="layui-nav-child">
-              <dd><a href="javascript:;"><i class="layui-icon layui-icon-read"></i>文章类别</a></dd>
+              <dd><a href="/home/article/article_category.html" target="layBody"><i
+                    class="layui-icon layui-icon-read"></i>文章类别</a></dd>
               <dd><a href="javascript:;"><i class="layui-icon layui-icon-read"></i>文章列表</a></dd>
               <dd><a href="javascript:;"><i class="layui-icon layui-icon-read"></i>发布文章</a></dd>
             </dl>
@@ -70,7 +71,8 @@
             <dl class="layui-nav-child">
               <dd><a href="/user/user_info.html" target="layBody"><i class="layui-icon layui-icon-set-fill"></i>基本资料</a>
               </dd>
-              <dd><a href="javascript:;"><i class="layui-icon layui-icon-set-fill"></i>更换头像</a></dd>
+              <dd><a href="/user/user_avart.html" target="layBody"><i
+                    class="layui-icon layui-icon-set-fill"></i>更换头像</a></dd>
               <dd><a href="/user/user_pwd.html" target="layBody"><i class="layui-icon layui-icon-set-fill"></i>重置密码</a>
               </dd>
             </dl>
@@ -81,7 +83,7 @@
 
     <div class="layui-body">
       <!-- 内容主体区域 -->
-      <iframe src="/user/user_pwd.html" frameborder="0" name="layBody"></iframe>
+      <iframe src="/home/article/article_category.html" frameborder="0" name="layBody"></iframe>
       <div style="padding: 15px;">内容主体区域</div>
     </div>
 
