--- a/user/user_pwd.html
+++ b/user/user_pwd.html
@@ -13,26 +13,26 @@
     <div class="layui-card">
         <div class="layui-card-header">修改密码</div>
         <div class="layui-card-body">
-            <form class="layui-form" action="">
+            <form class="layui-form" id="pwdForm">
                 <div class="layui-form-item">
-                    <label class="layui-form-label">密码框</label>
+                    <label class="layui-form-label">原密码</label>
                     <div class="layui-input-block">
-                        <input type="password" name="password" required lay-verify="required" placeholder="请输入密码"
+                        <input type="password" name="oldpwd" required lay-verify="required|pass" placeholder="请输入原密码"
                             autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-form-item">
-                    <label class="layui-form-label">密码框</label>
+                    <label class="layui-form-label">新密码</label>
                     <div class="layui-input-block">
-                        <input type="password" name="password" required lay-verify="required" placeholder="请输入密码"
-                            autocomplete="off" class="layui-input">
+                        <input type="password" name="newpwd" required lay-verify="required|pass|newpwd"
+                            placeholder="请输入新密码" autocomplete="off" class="layui-input">
                     </div>
                 </div>
                 <div class="layui-form-item">
-                    <label class="layui-form-label">密码框</label>
+                    <label class="layui-form-label">确认新密码</label>
                     <div class="layui-input-block">
-                        <input type="password" name="password" required lay-verify="required" placeholder="请输入密码"
-                            autocomplete="off" class="layui-input">
+                        <input type="password" name="repwd" required lay-verify="required|pass|samepwd"
+                            placeholder="请再次确认新密码" autocomplete="off" class="layui-input">
                     </div>
                 </div>
 
